--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
   "author": "gzanarelli",
   "license": "ISC",
   "dependencies": {
+    "await-to-js": "^2.1.1",
     "boom": "^7.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.2"
+    "express-validator": "^6.4.0",
+    "glob": "^7.1.6",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.2",
+    "mongoose-paginate": "^5.0.3",
+    "node-geocoder": "^3.25.0",
+    "nodemon": "^2.0.2",
+    "path": "^0.12.7"
   }
 }
