--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "await-to-js": "^2.1.1",
+    "bcryptjs": "^2.4.3",
     "boom": "^7.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
