--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon -L index.js",
+    "dev": "npm i && npx nodemon -L index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "gzanarelli",
